# dax_images_cutout

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.rst  SConstruct  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  test.yaml
doc/: conf.py  index.rst  manifest.yaml
doc/lsst.dax.images.cutout/: index.rst
doc/lsst.image.cutout.backend/: index.rst
doc/lsst.image_cutout_backend/: index.rst
docs/superpowers/plans/: 2026-06-16-stencils-afw-geom-removal.md  2026-06-16-stencils-modernization.md
docs/superpowers/specs/: 2026-06-16-stencils-afw-geom-removal-design.md  2026-06-16-stencils-modernization-design.md
python/lsst/dax/images/cutout/: __init__.py  _fits_projection.py  _image_cutout.py  projection_finders.py  stencils.py
python/lsst/image_cutout_backend/: __init__.py  _image_cutout_backend.py  _rgb_image_cutout.py  projection_finders.py  stencils.py
tests/: bench_stencils.py  test_fits_projection.py  test_imageCutoutsBackend.py  test_imageCutoutsBackendV2.py  test_rgb_image_cutout.py  test_stencils.py
tests/butler/: gen3.sqlite3
ups/: dax_images_cutout.table  image_cutout_backend.table
