[build-system]
requires = ["setuptools", "lsst-versions >= 1.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lsst-dax-images-cutout"
requires-python = ">=3.13.0"
description = "Simple cutout code for LSST images."
license = "GPL-3.0-or-later"
license-files = ["COPYRIGHT", "LICENSE"]
readme = "README.rst"
authors = [
    {name="Rubin Observatory Data Management", email="dm-admin@lists.lsst.org"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords=["lsst"]
dependencies = [
    "astropy >= 7.0",
    "fsspec",
    "numpy >= 2.0",
    "starlink-pyast >=4.0.1",
    "lsst-daf-butler",
    "lsst-images",
    "lsst-utils",
    "lsst-resources[https]",
    "lsst-sphgeom"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/lsst/dax_images_cutout"
"Source" = "https://github.com/lsst/dax_images_cutout"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "lsst_versions.get_lsst_version" }

[tool.lsst_versions]
write_to = "python/lsst/dax/images/cutout/version.py"

[tool.pytest.ini_options]

[tool.isort]
profile = "black"
line_length = 110
known_first_party = ["lsst"]

[tool.black]
line-length = 110
target-version = ["py313"]

[tool.ruff]
line-length = 110
target-version = "py313"
exclude = [
    "__init__.py",
]

[tool.ruff.lint]
ignore = [
    "N802",
    "N803",
    "N806",
    "N812",
    "N815",
    "N816",
    "N999",
    "D107",
    "D105",
    "D102",
    "D104",
    "D100",
    "D200",
    "D205",
    "D400",
]
select = [
    "E",  # pycodestyle
    "F",  # pycodestyle
    "N",  # pep8-naming
    "W",  # pycodestyle
    "D",  # pydocstyle
    "UP",  # pyupgrade
    "I",  # isort
    "B",  # bugbear
    "C4",  # comprehensions
    "RUF022",  # sort __all__
]

[tool.ruff.lint.isort]
known-first-party = ["lsst"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true
# Formatter does not know about indenting.
docstring-code-line-length = 69
